service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: hello-world
    app.kubernetes.io/name: hello-kubernetes
  name: hello-kubernetes-hello-world
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: hello-world
    app.kubernetes.io/name: hello-kubernetes
  type: LoadBalancer
